--- a/app/frontend/html/templates/en/tournament_bracket.html
+++ b/app/frontend/html/templates/en/tournament_bracket.html
@@ -8,10 +8,10 @@
     <div class="bracket_body_outer">
         <p id="bracket_title">Clasificación</p>
             <div class="bracket_body_inner">
-                <div id="bracket_qual1"><p class="bracket_player_win"></p></div>
-                <div id="bracket_qual2"><p class="bracket_player_greyed_out"></p></div>
-                <div id="bracket_qual3"><p class="bracket_player_next_up"></p></div>
-                <div id="bracket_qual4"><p class="bracket_player_next_up"></p></div>
+                <div id="bracket_qual1"><p class="bracket_player_neutral"></p></div>
+                <div id="bracket_qual2"><p class="bracket_player_neutral"></p></div>
+                <div id="bracket_qual3"><p class="bracket_player_neutral"></p></div>
+                <div id="bracket_qual4"><p class="bracket_player_neutral"></p></div>
                 <div id="bracket_qual5"><p class="bracket_player_neutral"></p></div>
                 <div id="bracket_qual6"><p class="bracket_player_neutral"></p></div>
                 <div id="bracket_qual7"><p class="bracket_player_neutral"></p></div>
