end tournament wip

--- a/app/frontend/html/templates/en/alert.html
+++ b/app/frontend/html/templates/en/alert.html
@@ -26,7 +26,7 @@
     Invalid username
 </div>
 
-<div class="alert text-center alert-danger" role="alert" id="invalid-OTP" onclick="hideAlert(this)" style="display: none;">
+<div class="alert text-center alert-danger" role="alert" id="Invalid-OTP" onclick="hideAlert(this)" style="display: none;">
     Invalid OTP
 </div>
 
