--- a/app/frontend/html/templates/en/alert.html
+++ b/app/frontend/html/templates/en/alert.html
@@ -171,3 +171,7 @@
 <div class="alert alert-danger" role="alert" id="invalid-tournament-name" onclick="hideAlert(this)" style="display: none;">
     Invalid tournament name
 </div>
+
+<div class="alert alert-danger" role="alert" id="no-tournament-to-end" onclick="hideAlert(this)" style="display: none;">
+    No tournament to end
+</div>
