--- a/app/frontend/html/templates/es/home.html
+++ b/app/frontend/html/templates/es/home.html
@@ -1,16 +1,16 @@
-<div id="splash_panel"><b>Dos juegos.<br>Millones de<br>posibilidades.</b>
+<div id="splash_panel"><b>Dos juegos<br>Millones de<br>posibilidades.</b>
     <a href="#register"><div id="splash_subtitle">¡Demuestra tu habilidad!</div></a>
 </div>
 <div id="splash_center_panel">
-    Únete ahora y comienza a jugar. ¡Diversión y<br>competencia te esperan!
+    Unete ahora y empieza a jugar. ¡La diversión y la<br>competición te esperan!
 </div>
 <div id="games_header">
     <b>Conoce nuestros juegos</b>
 </div>
 <div id="games_textbox">
-    ¡Aquí es donde se encuentran los verdaderos jugadores! Dos juegos, infinitas<br>
+    ¡Aquí es donde los verdaderos jugadores se encuentran! Dos juegos, infinitas<br>
     posibilidades de hacer amigos, compartir estrategias y, por supuesto, ganar.<br>
-    ¿Te unes?
+    ¿Te unes? 
 </div>
 <div id="games_container">
     <a href="#pong">
@@ -19,7 +19,7 @@
             <img src="media/pong.png" alt="Pong">
         </div>
         <p class="game_title">PONG</p>
-        <p class="game_subtitle">Creado por: </p>
+        <p class="game_subtitle">Creado por: fragarci </p>
     </div>
     </a>
     <a href="#tictactoe">
@@ -28,17 +28,18 @@
             <img src="media/TicTacToe.png" width="100%" alt="TicTacToe">
         </div>
         <p class="game_title">TIC-TAC-TOE</p>
-        <p class="game_subtitle">Creado por: </p>
+        <p class="game_subtitle">Creado por: anamarqu</p>
     </div>
     </a>
 </div>
 <hr class="hr_footer">
 <div id="footer_container">
     <img id="footer_logo" src="media/Trascendence_Square_Logo.svg">
-    <p id="footer_credits">FT_Trascendence ha sido creado por el equipo [NOMBRE] para 42 Málaga.<br><br>
-    [NOMBRE 1] - [TRABAJO DESEMPEÑADO]<br>
-    [NOMBRE 2] - [TRABAJO DESEMPEÑADO]<br>
-    [NOMBRE 3] - [TRABAJO DESEMPEÑADO]<br>
-    [NOMBRE 4] - [TRABAJO DESEMPEÑADO]<br>
-    [NOMBRE 5] - [TRABAJO DESEMPEÑADO]</p>
+    <p id="footer_credits">FT_Trascendence ha sido creado por el equipo "El Fin de la Cosa" para 42 Málaga.<br><br>
+    jzaragoz - Frontend (Diseño, HTML/CSS y Localizaciones)<br>
+    manujime - Fullstack (Backend y Frontend)<br>
+    abeltran - Fullstack (Backend y Frontend)<br>
+    fragarci - Frontend (Pong y Estadisticas)<br>
+    anamarqu - Frontend (Tic-Tac-Toe e IA)</p>
+    <p>Politica de cookies: <i>Este sitio no usa cookies.</i></p>
 </div>
