--- a/app/frontend/html/templates/es/login.html
+++ b/app/frontend/html/templates/es/login.html
@@ -1,15 +1,15 @@
 
 <div class="form_container">
     <div class="form_body">
-        <p class="form_title">LOGIN</p>
+        <p class="form_title">INICIAR SESIÓN</p>
         <form id="loginForm" onsubmit="event.preventDefault(); AuthLb.login2fa();">
-            <p class="form_label">USERNAME</p>
+            <p class="form_label">USUARIO</p>
             <input id="username" class="form_field" type="text" required/>
-            <p class="form_label">PASSWORD</p>
+            <p class="form_label">CONTRASEÑA</p>
             <input id="password" class="form_field" type="password" required/>
-            <button type="submit" class="form_main_button">LOGIN</button>
+            <button type="submit" class="form_main_button">ENTRAR</button>
         </form>
-        <p class="form_bottom">Don't have an account?</p>
-        <a href="#register" class="form_link">Register here</a>
+        <p class="form_bottom">¿No tienes cuenta?</p>
+        <a href="#register" class="form_link">Registrate aqui</a>
     </div>
 </div>
