--- a/app/frontend/html/templates/es/footer.html
+++ b/app/frontend/html/templates/es/footer.html
@@ -1,7 +1,8 @@
 <img id="footer_logo" src="media/Trascendence_Square_Logo.svg">
-<p id="footer_credits">FT_Transcendence has been created by the team [EFDLC] for 42 Málaga.<br><br>
-[NAME 1] - [JOB PERFORMED]<br>
-[NAME 2] - [JOB PERFORMED]<br>
-[NAME 3] - [JOB PERFORMED]<br>
-[NAME 4] - [JOB PERFORMED]<br>
-[NAME 5] - [JOB PERFORMED]</p>
+<p id="footer_credits">FT_Trascendence ha sido creado por el equipo "El Fin de la Cosa" para 42 Málaga.<br><br>
+jzaragoz - Frontend (Diseño, HTML/CSS y Localizaciones)<br>
+manujime - Fullstack (Backend y Frontend)<br>
+abeltran - Fullstack (Backend y Frontend)<br>
+fragarci - Frontend (Pong y Estadisticas)<br>
+anamarqu - Frontend (Tic-Tac-Toe e IA)</p>
+<p>Politica de cookies: <i>Este sitio no usa cookies.</i></p>
