--- a/app/frontend/html/templates/es/pong.html
+++ b/app/frontend/html/templates/es/pong.html
@@ -1,18 +1,18 @@
 <div class="selection-container" id="selection-screen"></div>
-    <h1>Choose your mode</h1>
+    <h1>Escoge un modo</h1>
     <div class="selection-buttons">
-        <button id="two-players">2 Players</button>
-        <button id="one-player">1 Player</button>
+        <button id="two-players">2 Jugadores</button>
+        <button id="one-player">1 Jugador</button>
     </div>
 </div>
 
 <div class="selection-container" id="difficulty-screen">
-    <h1>Select Difficulty</h1>
+    <h1>Selecciona la dificultad</h1>
     <div class="difficulty-buttons">
-        <button onclick="startGameWithDifficulty('easy')">Easy</button>
+        <button onclick="startGameWithDifficulty('easy')">Fácil</button>
         <button onclick="startGameWithDifficulty('normal')">Normal</button>
-        <button onclick="startGameWithDifficulty('hard')">Hard</button>
-        <button onclick="startGameWithDifficulty('extreme')">Extreme</button>
+        <button onclick="startGameWithDifficulty('hard')">Difícil</button>
+        <button onclick="startGameWithDifficulty('extreme')">Extrema</button>
     </div>
 </div>
 
