--- a/app/frontend/html/templates/es/register.html
+++ b/app/frontend/html/templates/es/register.html
@@ -2,17 +2,17 @@
 
 <div class="form_container">
     <div class="form_body_xl">
-        <p class="form_title">SIGNUP</p>
+        <p class="form_title">REGISTRARSE</p>
         <form id="registerForm" onsubmit="event.preventDefault(); AuthLb.register();">
-            <p class="form_label">NAME</p>
+            <p class="form_label">NOMBRE</p>
             <input id="username" class="form_field" type="text" required/>
             <p class="form_label">EMAIL</p>
             <input id="email" class="form_field" type="text" required/>
-            <p class="form_label">PASSWORD</p>
+            <p class="form_label">CONTRASEÑA</p>
             <input id="password" class="form_field" type="password" required/>
             <button type="submit" class="form_main_button">SIGNUP</button>
         </form>
-        <p class="form_bottom">Already have an account?</p>
-        <a href="#login" class="form_link">Login here</a>
+        <p class="form_bottom">¿Ya tienes cuenta?</p>
+        <a href="#login" class="form_link">Entra aqui</a>
     </div>
 </div>
