--- a/app/frontend/html/templates/es/scores.html
+++ b/app/frontend/html/templates/es/scores.html
@@ -1,6 +1,15 @@
-<div class="template_container">
-    <div class="template_body">
-    <h>High Scores</h>
-    <p>Here is where you can find the high scores of our games.</p>
-    </div>
+<div id="sc_leaderboard_container">
+    <div id="sc_leaderboard_body">
+        <table id="scoreboard">
+            <tr>
+                <th class="sc_place">PUESTO</th>
+                <th class="sc_name">NOMBRE</th>
+                <th class="sc_prestige">PRESTIGIO</th>
+            </tr>
+            <tr id="template_score" style="display: none;">
+                <td class="sc_content" id="template_rank">#1</td>
+                <td class="sc_content" id="template_name">SkibidiSigma</td>
+                <td class="sc_content" id="template_wins">120</td>
+            </tr>
+        </table>
 </div>
