--- a/app/frontend/html/templates/es/tournament_home.html
+++ b/app/frontend/html/templates/es/tournament_home.html
@@ -1,56 +1,25 @@
 <div class="form_container">
     <div class="form_body_xl">
         <p class="form_title">Torneos</p>
-        <button class="form_main_button_reduced_margin">Crear nuevo torneo</button>
+        <!-- <button class="form_main_button_reduced_margin" onclick="changeLocation('#createTournament')">Create New Tournament</button> -->
+        <a href="#createTournament"><button class="form_main_button_reduced_margin">Create New Tournament</button></a>
         <hr class="hr_form_separator">
-        <p class="form_title">Mis invitaciones</p>
-        <div class="tour_home_subscroll">
-            <div class="tour_request_item">
-                <img class="pr_friend_image" src="../media/placeholders/CK.jpg">
+        <p class="form_title">Mis Invitaciones</p>
+        <div id="tournaments_bar" class="tour_home_subscroll">
+            <div class="tour_request_item" id="tour_invite_template" style="display: none;">
+                <img id="img_template" class="pr_friend_image" src="../media/Profile_avatar_placeholder_large">
                 <div class="pr_friend_info">
-                    <p class="pr_friend_username">Nombre del anfitrión</p>
-                    <p class="tour_name">Nombre del torneo</p>
+                    <p id="tour_hostname_template" class="pr_friend_username">Nombre del anfitrión</p>
+                    <p id="tour_name_template" class="tour_name">Nombre del torneo</p>
                 </div>
-                <button class="pr_friend_accept_button">✓</button>
-                <button class="pr_friend_decline_button">✕</button>
+                <button id="tour_accept_template" class="pr_friend_accept_button" onclick="acceptTourInvite(this, 'accept')">✓</button>
+                <button id="tour_decline_template" class="pr_friend_decline_button" onclick="acceptTourInvite(this, 'reject')">✕</button>
             </div>
-            <div class="tour_request_item">
-                <img class="pr_friend_image" src="../media/placeholders/CK.jpg">
+            <div class="tour_accepted_item" id = "tour_accepted_template" style="display: none;">
+                <img id="img_template" class="pr_friend_image" src="../media/Profile_avatar_placeholder_large">
                 <div class="pr_friend_info">
-                    <p class="pr_friend_username">Nombre del anfitrión</p>
-                    <p class="tour_name">Nombre del torneo</p>
-                </div>
-                <button class="pr_friend_accept_button">✓</button>
-                <button class="pr_friend_decline_button">✕</button>
-            </div>
-            <div class="tour_request_item">
-                <img class="pr_friend_image" src="../media/placeholders/CK.jpg">
-                <div class="pr_friend_info">
-                    <p class="pr_friend_username">Nombre del anfitrión</p>
-                    <p class="tour_name">Nombre del torneo</p>
-                </div>
-                <button class="pr_friend_accept_button">✓</button>
-                <button class="pr_friend_decline_button">✕</button>
-            </div>
-            <div class="tour_accepted_item">
-                <img class="pr_friend_image" src="../media/placeholders/CK.jpg">
-                <div class="pr_friend_info">
-                    <p class="pr_friend_username">Nombre del anfitrión</p>
-                    <p class="tour_name">Nombre del torneo</p>
-                </div>
-            </div>
-            <div class="tour_accepted_item">
-                <img class="pr_friend_image" src="../media/placeholders/CK.jpg">
-                <div class="pr_friend_info">
-                    <p class="pr_friend_username">Nombre del anfitrión</p>
-                    <p class="tour_name">Nombre del torneo</p>
-                </div>
-            </div>
-            <div class="tour_accepted_item">
-                <img class="pr_friend_image" src="../media/placeholders/CK.jpg">
-                <div class="pr_friend_info">
-                    <p class="pr_friend_username">Nombre del anfitrión</p>
-                    <p class="tour_name">Nombre del torneo</p>
+                    <p id="tour_hostname_template" class="pr_friend_username">Nombre del anfitrión</p>
+                    <p id="tour_name_template" class="tour_name">Nombre del torneo</p>
                 </div>
             </div>
         </div>
