--- a/app/frontend/html/templates/en/tournament_bracket.html
+++ b/app/frontend/html/templates/en/tournament_bracket.html
@@ -24,9 +24,9 @@
             </div>
     </div>
 </div>
-<div id="anonymize_confirmation_overlay" class="overlay" style="display: none;">
+<div id="tournament_overlay" class="overlay" style="display: none;">
     <div class="overlay_winner">
         <p><span id="winner_username">[USERNAME]</span> has won the tournament!</p>
-        <button class="form_settings_popup_button" onclick="changeLocation('#')">Return to home</button>'
+        <button class="form_settings_popup_button" onclick="changeLocation('#')">Return to home</button>
     </div>
 </div>
