Fixed stray english in spanish localization and removed dup ID

--- a/app/frontend/html/templates/es/register.html
+++ b/app/frontend/html/templates/es/register.html
@@ -10,7 +10,7 @@
             <input id="email" class="form_field" type="text" required/>
             <p class="form_label">CONTRASEÑA</p>
             <input id="password" class="form_field" type="password" required/>
-            <button type="submit" class="form_main_button">SIGNUP</button>
+            <button type="submit" class="form_main_button">ENTRAR</button>
         </form>
         <p class="form_bottom">¿Ya tienes cuenta?</p>
         <a href="#login" class="form_link">Entra aqui</a>
