--- a/app/frontend/html/templates/es/tournament_bracket.html
+++ b/app/frontend/html/templates/es/tournament_bracket.html
@@ -26,7 +26,7 @@
 </div>
 <div id="anonymize_confirmation_overlay" class="overlay" style="display: none;">
     <div class="overlay_winner">
-        <p><span id="winner_username">[USERNAME]</span> has won the tournament!</p>
-        <button class="form_settings_popup_button" onclick="changeLocation('#')">Return to home</button>'
+        <p><span id="winner_username">[USERNAME]</span> ha ganado el torneo!</p>
+        <button class="form_settings_popup_button" onclick="changeLocation('#')">Volver al inicio</button>
     </div>
 </div>
