--- a/app/frontend/html/templates/es/tournament_home.html
+++ b/app/frontend/html/templates/es/tournament_home.html
@@ -2,7 +2,7 @@
     <div class="form_body_xl">
         <p class="form_title">Torneos</p>
         <!-- <button class="form_main_button_reduced_margin" onclick="changeLocation('#createTournament')">Create New Tournament</button> -->
-        <a href="#createTournament"><button class="form_main_button_reduced_margin">Create New Tournament</button></a>
+        <a href="#createTournament"><button class="form_main_button_reduced_margin">Crear nuevo torneo</button></a>
         <hr class="hr_form_separator">
         <p class="form_title">Mis Invitaciones</p>
         <div id="tournaments_bar" class="tour_home_subscroll">
