Finished tournaments, fixed home image, changed footer

--- a/app/frontend/html/templates/es/home.html
+++ b/app/frontend/html/templates/es/home.html
@@ -16,30 +16,24 @@
     <a href="#pong">
     <div class="game_card">
         <div class="game_image">
-            <img src="media/pong.png" alt="Pong">
+            <img src="media/pong.png" alt="Pong" width="100%" height="100%">
         </div>
         <p class="game_title">PONG</p>
-        <p class="game_subtitle">Creado por: fragarci </p>
     </div>
     </a>
     <a href="#tictactoe">
     <div class="game_card">
         <div class="game_image">
-            <img src="media/TicTacToe.png" width="100%" alt="TicTacToe">
+            <img src="media/TicTacToe.png" width="100%" alt="TicTacToe" height="100%">
         </div>
         <p class="game_title">TIC-TAC-TOE</p>
-        <p class="game_subtitle">Creado por: anamarqu</p>
     </div>
     </a>
 </div>
 <hr class="hr_footer">
 <div id="footer_container">
     <img id="footer_logo" src="media/Trascendence_Square_Logo.svg">
-    <p id="footer_credits">FT_Trascendence ha sido creado por el equipo "El Fin de la Cosa" para 42 Málaga.<br><br>
-    jzaragoz - Frontend (Diseño, HTML/CSS y Localizaciones)<br>
-    manujime - Fullstack (Backend y Frontend)<br>
-    abeltran - Fullstack (Backend y Frontend)<br>
-    fragarci - Frontend (Pong y Estadisticas)<br>
-    anamarqu - Frontend (Tic-Tac-Toe e IA)</p>
-    <p>Politica de cookies: <i>Este sitio no usa cookies.</i></p>
+    <p id="footer_credits">FT_Transcendence ha sido creado por el equipo "El Fin de la Cosa" para 42 Málaga.<br><br>
+        Miembros del equipo: manujime - abeltran - jzaragoz - fragarci - anamarqu<br><br><br><br><br><br>
+        Política de cookies: <i>Este sitio no utiliza cookies.</i></p>
 </div>
