--- a/app/frontend/html/templates/en/home.html
+++ b/app/frontend/html/templates/en/home.html
@@ -16,30 +16,25 @@
     <a href="#pong">
     <div class="game_card">
         <div class="game_image">
-            <img src="media/pong.png" alt="Pong">
+            <img src="media/pong.png" alt="Pong" width="100%" height="100%">
         </div>
         <p class="game_title">PONG</p>
-        <p class="game_subtitle">Created by: </p>
     </div>
     </a>
     <a href="#tictactoe">
     <div class="game_card">
         <div class="game_image">
-            <img src="media/TicTacToe.png" width="100%" alt="TicTacToe">
+            <img src="media/TicTacToe.png" width="100%" alt="TicTacToe" height="100%">
         </div>
         <p class="game_title">TIC-TAC-TOE</p>
-        <p class="game_subtitle">Created by: </p>
     </div>
     </a>
 </div>
 <hr class="hr_footer">
 <div id="footer_container">
     <img id="footer_logo" src="media/Trascendence_Square_Logo.svg">
-    <p id="footer_credits">FT_Transcendence has been created by the team [NOMBRE] for 42 Málaga.<br><br>
-    [NAME 1] - [JOB PERFORMED]<br>
-    [NAME 2] - [JOB PERFORMED]<br>
-    [NAME 3] - [JOB PERFORMED]<br>
-    [NAME 4] - [JOB PERFORMED]<br>
-    [NAME 5] - [JOB PERFORMED]</p>
+    <p id="footer_credits">FT_Transcendence has been created by the team "El Fin de la Cosa" for 42 Málaga.<br><br>
+        Team members: manujime - abeltran - jzaragoz - fragarci - anamarqu<br><br><br><br><br><br>
+        Cookies policy: <i>This site does not use cookies.</i></p>
 </div>
     <!--footer here-->
